--- a/.github/workflows/pytest-unit-tests.yml
+++ b/.github/workflows/pytest-unit-tests.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         pip install --upgrade pip
         pip install -e .
+        pip install numpy
         pip install -r requirements.txt
 
     - name: Test with pytest
