--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install flake8
+        pip install -e .[dev]
 
     - name: Lint with flake8
       run: |
