--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,23 @@ license = { text = "MIT" }
 authors = [{ name = "Your Name" }]
 dependencies = []
 
+
+[project.optional-dependencies]
+
+dev = [
+  "pytest",
+  "pytest-cov",
+  "flake8",
+]
+
+docs = [
+  "sphinx"
+]
+
 [tool.setuptools.packages.find]
 include = ["simple_functions*"]
+
+
 
 [tool.pytest.ini_options]
 addopts = "-q"
